tests/compile_error/generic_enum.rs
#[proconio_enum_query::proconio_enum_query]
#[allow(dead_code)]
#[derive(PartialEq, Debug)]
enum Query<T> {
    A(T),
    B,
}

fn main() {}
