tests/compile_error/generic_enum.stderr
error: generic enum not supported.
 --> $DIR/generic_enum.rs:4:11
  |
4 | enum Query<T> {
  |           ^^^
